Added state validation to UserViewModel, 'Select a State' option to state_array

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_name">Android Code Test</string>
 
     <string-array name="states_array">
+        <item>Select a State</item>
         <item>Alabama</item>
         <item>Alaska</item>
         <item>American Samoa</item>
